--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h3>Rupesh is good</h3>
-    <h4>This is  my feauter
+    <h4>This is new one </h4>
     </h4>
     <h1>This is our second page</h1>
 </body>
